welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:10: error: illegal start of simple expression
  if (virage == 1) => setCouleurBrosse(c:Color.blue);
                   ^Runner:11: error: '(' expected but identifier found.
  if virage == 2 => setCouleurBrosse(c:Color.cyan);
     ^Runner:11: error: illegal start of simple expression
  if virage == 2 => setCouleurBrosse(c:Color.cyan);
                                                  ^Runner:12: error: '(' expected but identifier found.
  if virage == 3 => setCouleurBrosse(c:Color.green);
     ^Runner:12: error: illegal start of simple expression
  if virage == 3 => setCouleurBrosse(c:Color.green);
                                                   ^Runner:13: error: '(' expected but identifier found.
  if virage == 4 => setCouleurBrosse(c:Color.yellow);
     ^Runner:13: error: illegal start of simple expression
  if virage == 4 => setCouleurBrosse(c:Color.yellow);
                                                    ^Runner:14: error: '(' expected but identifier found.
  if virage == 5 => setCouleurBrosse(c:Color.orange);
     ^Runner:14: error: illegal start of simple expression
  if virage == 5 => setCouleurBrosse(c:Color.orange);
                                                    ^Runner:15: error: '(' expected but identifier found.
  if virage == 6 => setCouleurBrosse(c:Color.red);
     ^Runner:15: error: illegal start of simple expression
  if virage == 6 => setCouleurBrosse(c:Color.red);
                                                 ^Runner:16: error: '(' expected but identifier found.
  if virage == 7 => setCouleurBrosse(c:Color.magenta);
     ^Runner:16: error: illegal start of simple expression
  if virage == 7 => setCouleurBrosse(c:Color.magenta);
                                                     ^Runner:17: error: '(' expected but identifier found.
  if virage == 8 => setCouleurBrosse(c:Color.pink);
     ^Runner:17: error: illegal start of simple expression
  if virage == 8 => setCouleurBrosse(c:Color.pink);
                                                  ^